# just-curious

./: .gitmodules  README.md
ai/: openai_test.py
ai/llama_cpp/: .gitignore  Makefile  README.md  README2.md  README_v2.md  json.json  play.py  readme.archive.md  test.py
dvwa/: README.md
hello_docker/go/: Dockerfile  docker-compose.yml
hello_docker/ocaml/: Dockerfile  docker-compose.yml
hello_docker/rust/: Cargo.toml  Dockerfile  docker-compose.yml
hello_docker/rust/src/: main.rs
hello_java/: .gitignore  Dockerfile  README.md  docker-compose.yml
hello_java/mypackage/: Greeting.java
infa/: .gitignore  README.md  main.tf
introspection/go/: main.go
introspection/rust/: docker-compose.yml  main
lambda_language_experiment/: README.md
lambda_language_experiment/scripts/: add_a_line.py  go2.go
language_speed_experiment/: README.md
language_speed_experiment/infa/: main.tf
llama_cpp/: README.md
machine_diagnostic_tools/: README.md
machine_diagnostic_tools/tcpdump/: Dockerfile  README.md
node-concurrent/: README.md  bad.ts  cars.csv  main.ts  package.json
nutrition-goals-gradient-descent/: README.md  foods_example.json  main,py  targets_example.json
s/: .gitignore  README.md  package.json
s/sandbox/: gemini_1.ts  gemini_2.ts  spotify_1.ts
scripts/: add_a_line.py  lambda2.py  trigger_lambda.py
size_of_lambda_experiment/scripts/: trigger_and_parse.py
spotify-photo-genai/: LICENSE  TODO.md  package.json  tsconfig.json
spotify-photo-genai/my-project/: package-lock.json  (+1 more)
tail_recursion/: tail_recursion.ipynb
text-to-speech/: main.py
(+59 files in other folders)
