[package]
name = "holodeck"
version = "0.1.0"
authors = ["rogertorres <rogertps@gmail.com>"]
edition = "2018"

# [[bin]]
# name = "holodeck"
# path = "src/main.rs"


[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1", features = ["derive"]}
serde_json = "1.0"